--- a/FinancyApp/DAL/DAL.csproj
+++ b/FinancyApp/DAL/DAL.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\DL\DL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
