--- a/FinancyApp/FinancyApp/FinancyApp.csproj
+++ b/FinancyApp/FinancyApp/FinancyApp.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\DL\DL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModel\" />
+  </ItemGroup>
+
 </Project>
