--- a/FinancyApp/FinancyApp/appsettings.json
+++ b/FinancyApp/FinancyApp/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-      "DefaultString": "Data Source=DESKTOP-5L9TMA8;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;Database=FinancyAppDb;"
+      "DefaultString": "Data Source=DESKTOP-UK63UJB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;Database=FinancyDb;"
     },
     "Logging": {
       "LogLevel": {
